exports[`PersonHeader should exist 1`] = `
<header
  className="header-site"
  role="banner">
  <div
    className="content">
    <h1>
      <span
        className="site-title" />
      <span
        className="site-description" />
    </h1>
    <div
      className="icons-home">
      <a
        aria-label="Send email"
        href="mailto:undefined">
        <svg
          className="icon icon-email">
          <use
            xlinkHref="#icon-email" />
        </svg>
      </a>
      <a
        aria-label="My Twitter"
        href="https://twitter.com/undefined"
        target="_blank">
        <svg
          className="icon icon-twitter">
          <use
            xlinkHref="#icon-twitter" />
        </svg>
      </a>
      <a
        aria-label="My Github"
        href="https://github.com/undefined"
        target="_blank">
        <svg
          className="icon icon-github-alt">
          <use
            xlinkHref="#icon-github-alt" />
        </svg>
      </a>
    </div>
    <div>
      <a
        onClick={[Function bound handleClick]}
        style={
          Object {
            "textDecoration": "none"
          }
        }>
        <br />
        <br />
        <h2>
          About Me
        </h2>
      </a>
    </div>
  </div>
  <a
    className="down"
    data-scroll={true}
    href="#scroll"
    role="button">
    <svg
      className="icon icon-angle-down">
      <use
        xlinkHref="#icon-angle-down" />
    </svg>
  </a>
  <div>
    <div
      className="search-wrapper">
      <div
        className="search-form">
        <input
          className="search-field"
          placeholder="Search..."
          type="text" />
        <svg
          className="icon-remove-sign">
          <use
            xlinkHref="#icon-close" />
        </svg>
        <ul
          className="search-results search-list" />
      </div>
    </div>
    <div
      className="overlay"
      id="fade"
      onClick={[Function bound toggleMenu]} />
    <a
      className="slideButton fade"
      id="slide">
      <svg
        className="icon-menu"
        id="open"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "inline"
          }
        }>
        <use
          xlinkHref="#icon-menu" />
      </svg>
      <svg
        className="icon-menu"
        id="close"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "none"
          }
        }>
        <use
          xlinkHref="#icon-close" />
      </svg>
    </a>
    <aside
      className=""
      id="sidebar">
      <nav
        id="navigation">
        <h2>
          MENU
        </h2>
        <ul>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              Posts
            </a>
          </li>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              About
            </a>
          </li>
        </ul>
      </nav>
    </aside>
  </div>
</header>
`;

exports[`PersonHeader should render props correctly 1`] = `
<header
  className="header-site"
  role="banner">
  <div
    className="content">
    <h1>
      <span
        className="site-title">
        test display name
      </span>
      <span
        className="site-description">
        test description
      </span>
    </h1>
    <div
      className="icons-home">
      <a
        aria-label="Send email"
        href="mailto:test@test.com">
        <svg
          className="icon icon-email">
          <use
            xlinkHref="#icon-email" />
        </svg>
      </a>
      <a
        aria-label="My Twitter"
        href="https://twitter.com/tw"
        target="_blank">
        <svg
          className="icon icon-twitter">
          <use
            xlinkHref="#icon-twitter" />
        </svg>
      </a>
      <a
        aria-label="My Github"
        href="https://github.com/gh"
        target="_blank">
        <svg
          className="icon icon-github-alt">
          <use
            xlinkHref="#icon-github-alt" />
        </svg>
      </a>
    </div>
    <div>
      <a
        onClick={[Function bound handleClick]}
        style={
          Object {
            "textDecoration": "none"
          }
        }>
        <br />
        <br />
        <h2>
          About Me
        </h2>
      </a>
    </div>
  </div>
  <a
    className="down"
    data-scroll={true}
    href="#scroll"
    role="button">
    <svg
      className="icon icon-angle-down">
      <use
        xlinkHref="#icon-angle-down" />
    </svg>
  </a>
  <div>
    <div
      className="search-wrapper">
      <div
        className="search-form">
        <input
          className="search-field"
          placeholder="Search..."
          type="text" />
        <svg
          className="icon-remove-sign">
          <use
            xlinkHref="#icon-close" />
        </svg>
        <ul
          className="search-results search-list" />
      </div>
    </div>
    <div
      className="overlay"
      id="fade"
      onClick={[Function bound toggleMenu]} />
    <a
      className="slideButton fade"
      id="slide">
      <svg
        className="icon-menu"
        id="open"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "inline"
          }
        }>
        <use
          xlinkHref="#icon-menu" />
      </svg>
      <svg
        className="icon-menu"
        id="close"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "none"
          }
        }>
        <use
          xlinkHref="#icon-close" />
      </svg>
    </a>
    <aside
      className=""
      id="sidebar">
      <nav
        id="navigation">
        <h2>
          MENU
        </h2>
        <ul>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              Posts
            </a>
          </li>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              About
            </a>
          </li>
        </ul>
      </nav>
    </aside>
  </div>
</header>
`;
